# jstorrent-native-host

./: Cargo.toml  README.md  verify_magnet.py
.github/workflows/: build-and-package.yml  deploy-pages.yml
ci/github-actions/: build-and-package.yml
docs/: install.sh
installers/linux/: install.sh
installers/macos/: Info.plist
installers/macos/scripts/: postinstall.sh
installers/windows/: jstorrent.iss
src/: atomic_move.rs  folder_picker.rs  fs.rs  hashing.rs  main.rs  protocol.rs  rpc.rs  state.rs  tcp.rs  udp.rs
vibe_artifacts/: README.md  prompts.md  user_prompts.md
