[package]
name = "jstorrent-host"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
thiserror = "1.0"
anyhow = "1.0"
rfd = "0.12"
sha1 = "0.10"
base64 = "0.21"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
